@@ -1,3 +1,3 @@
 /* { dg-do compile } */
 
-var i = "foo" ? 1 : 2; /* { dg-error "expected boolean" } */
+var i = "foo" ? 1 : 2; /* { dg-error "invalid expression.*\n.*expected boolean" } */
